0.2.0-next:
 * start with a list of previously opened disk images
 * search history, and a setting to limit number of saved searches

0.2.0:
 * search function (ctrl + f)
 * larger default text area height for tracebacks in error messages
 * bug: copying a directory means any modifications affect both, and writing
   only leaves the files in either the source or the copy, but removes them
   from the other

0.1.3:
 * allow writing to be cancelled (much) more often
 * display filesizes
 * significant write performance improvements for (very) large numbers of files
 * icon
 * desktop entry
 * preferences window closes on escape key
 * bug: settings don't get saved until the preferences window is closed
 * bug: when creating a new directory, it seems like the first file is being
   renamed instead of the new directory

0.1.2:
 * pause button when writing/extracting
 * internationalisation
 * Portuguese translation
 * more error handling while working (writing/extracting)
 * option to automatically close progress windows when finished
 * an option in warnings to stop them from being shown again, and a button in
   the preferences window to re-enable them all
 * editor window title indicates the disk image filename and whether it has
   unsaved changes