@@ -1,7 +1,7 @@
 """GameCube file utilities.
 
 Python version: 3.
-Release: 13.
+Release: 14-dev.
 
 Licensed under the GNU General Public License, version 3; if this was not
 included, you can find it here:
@@ -37,7 +37,8 @@ PAUSED_WAIT = .1: in functions that take a progress function, if the action is
 # TODO:
 # - decompress function
 # - BNR support
-# - handle not being able to access self.fn
+# - don't load fst on startup: have .load_fst; replaces .update
+# - validity checks on init
 
 import os
 from os.path import getsize, exists, dirname, basename
@@ -447,6 +448,9 @@ To import a directory tree from the real filesystem, use the tree_from_dir
 function in this module and place the result in the tree attribute, or
 replace the whole tree if you want to import an entire GameCube filesystem.
 
+All methods that read from the disk image (apart from write) don't handle an
+IOError; you should handle this yourself.
+
     CONSTRUCTOR
 
 GCFS(fn)
@@ -515,8 +519,8 @@ tree: a dict representing the root directory.  Each directory is a dict whose
         with open(self.fn, 'rb') as f:
             self.fs_start = fs_start = read(f, 0x424, 0x4, True)
             self.fst_size = read(f, 0x428, 0x4, True)
-            self.num_entries = read(f, self.fs_start + 0x8, 0x4, True)
-            self.str_start = str_start = self.fs_start + self.num_entries * 0xc
+            self.num_entries = read(f, fs_start + 0x8, 0x4, True)
+            self.str_start = str_start = fs_start + self.num_entries * 0xc
             # get file data
             self.entries = entries = []
             for i in range(1, self.num_entries):
@@ -1021,18 +1025,21 @@ be imported in the same call to this function.
                 except OSError:
                     pass
 
-        def cleanup ():
+        def cleanup (f = None):
             cleanup_tmp_dir()
             # return disk image to original size if expanded
             if truncated:
                 if f is None:
-                    with open(self.fn, 'r+b') as f:
-                        f.truncate(orig_disk_size)
+                    try:
+                        with open(self.fn, 'r+b') as f:
+                            f.truncate(orig_disk_size)
+                    except IOError:
+                        pass
                 else:
                     f.truncate(orig_disk_size)
 
         def error (msg, f = None, cls = IOError):
-            cleanup()
+            cleanup(f)
             # raise error
             e = cls(msg)
             e.handled = True
@@ -1042,30 +1049,37 @@ be imported in the same call to this function.
         if moving_files:
             orig_disk_size = getsize(self.fn)
             # copy files within disk image
-            with open(self.fn, 'r+b') as f:
-                # if we will be seeking beyond the image end, expand the file
-                end = f.seek(0, 2)
-                last_start = max(f[3] for f in moving_files)
-                if end < last_start:
-                    truncated = True
-                    f.truncate(last_start)
-                # copy
-                fn = self.fn
-                to_copy = []
-                to_copy_names = []
-                for old_i, i, old_start, start, size in moving_files:
-                    to_copy.append(((fn, f, old_start, size), (fn, f, start)))
-                    to_copy_names.append(names[i])
-                    # put in old_files
-                    old_files.append((start, i, old_i, size))
-                failed = copy(to_copy, progress, names, can_cancel = True)
-                if failed is True:
-                    # cancelled
-                    cleanup()
-                    return True
-                elif failed:
-                    msg = _('couldn\'t read from and write to the disk image')
-                    error(msg, f)
+            try:
+                with open(self.fn, 'r+b') as f:
+                    # if we will be seeking beyond the image end, expand it
+                    end = f.seek(0, 2)
+                    last_start = max(f[3] for f in moving_files)
+                    if end < last_start:
+                        truncated = True
+                        f.truncate(last_start)
+                    # copy
+                    fn = self.fn
+                    to_copy = []
+                    to_copy_names = []
+                    for old_i, i, old_start, start, size in moving_files:
+                        to_copy.append(((fn, f, old_start, size),
+                                        (fn, f, start)))
+                        to_copy_names.append(names[i])
+                        # put in old_files
+                        old_files.append((start, i, old_i, size))
+                    failed = copy(to_copy, progress, names, can_cancel = True)
+                    if failed is True:
+                        # cancelled
+                        cleanup(f)
+                        return True
+                    elif failed:
+                        msg = _('couldn\'t read from and write to the disk '
+                                'image')
+                        error(msg, f)
+            except IOError as e:
+                cleanup()
+                e.handled = True
+                raise
         # sort existing files by position
         old_files.sort()
         # get existing files overwritten by the filesystem/string tables and
@@ -1196,37 +1210,50 @@ be imported in the same call to this function.
             nf_clean.sort()
             nf_dirty.sort()
             # actually copy
-            with open(self.fn, 'r+b') as f:
-                # if we will be seeking beyond the image end, expand the file
-                end = f.seek(0, 2)
-                last_start = max(start for start, i in nf_clean + nf_dirty)
-                if end < last_start:
-                    f.truncate(last_start)
-                # split up the progress function
-                total = total_clean + total_dirty
-                p_clean = lambda d, t, n: progress(d, total, n)
-                p_dirty = lambda d, t, n: progress(d + total_clean, total, n)
-                # perform the copy
-                fn = self.fn
-                for clean in (True, False):
-                    to_copy = []
-                    to_copy_names = []
-                    for start, i in (nf_clean if clean else nf_dirty):
-                        is_dir, str_start, this_fn, size = entries[i]
-                        to_copy.append(((this_fn, None, 0, size),
-                                        (fn, f, start)))
-                        to_copy_names.append(names[i])
-                        entries[i] = (False, str_start, start, size)
-                    failed = copy(to_copy, p_clean if clean else p_dirty,
-                                  to_copy_names, can_cancel = clean)
-                    if failed is True:
-                        # cancelled
-                        cleanup()
-                        return True
-                    elif failed:
-                        msg = _('either couldn\'t read from \'{}\' or couldn\'t ' \
-                                'write to the disk image')
-                        error(msg.format(to_copy[failed[0]][0][0]), f)
+            clean = True
+            try:
+                with open(self.fn, 'r+b') as f:
+                    # if we will be seeking beyond the image end, expand it
+                    end = f.seek(0, 2)
+                    last_start = max(start for start, i in nf_clean + nf_dirty)
+                    if end < last_start:
+                        f.truncate(last_start)
+                    # split up the progress function
+                    total = total_clean + total_dirty
+                    p_clean = lambda d, t, n: progress(d, total, n)
+                    p_dirty = lambda d, t, n: progress(d + total_clean, total,
+                                                       n)
+                    # perform the copy
+                    fn = self.fn
+                    for clean in (True, False):
+                        to_copy = []
+                        to_copy_names = []
+                        for start, i in (nf_clean if clean else nf_dirty):
+                            is_dir, str_start, this_fn, size = entries[i]
+                            to_copy.append(((this_fn, None, 0, size),
+                                            (fn, f, start)))
+                            to_copy_names.append(names[i])
+                            entries[i] = (False, str_start, start, size)
+                        failed = copy(to_copy, p_clean if clean else p_dirty,
+                                      to_copy_names, can_cancel = clean)
+                        if failed is True:
+                            # cancelled
+                            cleanup(f)
+                            return True
+                        elif failed:
+                            msg = _('either couldn\'t read from \'{}\' or '
+                                    'couldn\'t write to the disk image')
+                            msg = msg.format(to_copy[failed[0]][0][0])
+                            if clean:
+                                error(msg, f)
+                            else:
+                                cleanup(f)
+                                raise IOError(msg)
+            except IOError as e:
+                cleanup()
+                if clean:
+                    e.handled = True
+                raise
 
         cleanup_tmp_dir()
         # get new fst_size, num_entries, str_start
@@ -1324,7 +1351,7 @@ See compress for more details.
         return changed
 
     def _slow_compress (self, tmp_dir, progress = None):
-        """Quick compress of the image.
+        """Slow compress of the image.
 
 _slow_compress(tmp_dir[, progress]) -> changed
 
@@ -1356,6 +1383,9 @@ filesystem string table and the file data, sometimes hundreds of MiB.  This
 will also remove free space between files that may have been opened up by
 deletions or other editing.
 
+This method calls the write method; see its documentation for information on
+exceptions.
+
 IMPORTANT: any changes that have been made to the tree are discarded before
 compressing.  Make sure you write everything you want to keep first.
 
@@ -1380,14 +1410,17 @@ will also remove free space between files that may have been opened up by
 deletions or other editing.
 
 A quick compress may not remove all free space, but does well enough.  It
-should also be faster and doesn't use any extra disk space (or memory, if you're
-thinking of a ramdisk).  Unless you're obsessive-compulsive, this should be
-good enough.
+should also be faster and doesn't use any extra disk space (or memory, if
+you're thinking of a ramdisk).  Unless you're obsessive-compulsive, this should
+be good enough.
 
 As implied above, a full compress may use some extra disk space.  While
 unlikely, this may be as much as the size of this disk image.  More
 importantly, if tmp_dir is not given, the directory used might be on a ramdisk,
 so we could end up running out of memory.  Be careful.
+
+This method calls the write method; see its documentation for information on
+exceptions.
 
 IMPORTANT: any changes that have been made to the tree are discarded before
 compressing.  Make sure you write everything you want to keep first.
